--- a/app/src/main/res/layout/activity_manage_lists.xml
+++ b/app/src/main/res/layout/activity_manage_lists.xml
@@ -22,6 +22,7 @@
     tools:context="eu.z3r0byteapps.magistertokens.ManageListsActivity">
 
     <android.support.design.widget.AppBarLayout
+        android:elevation="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
@@ -35,14 +36,14 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_manage_lists" />
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
-        android:layout_width="72dp"
-        android:layout_height="72dp"
+        android:layout_width="64dp"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_add_list" />
+        android:src="@drawable/ic_add_list"
+        android:layout_height="64dp" />
+
+    <include layout="@layout/content_manage_lists" />
 
 </android.support.design.widget.CoordinatorLayout>
