--- a/app/src/main/res/layout/content_manage_lists.xml
+++ b/app/src/main/res/layout/content_manage_lists.xml
@@ -19,12 +19,37 @@
     android:id="@+id/content_manage_lists"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="eu.z3r0byteapps.magistertokens.ManageListsActivity"
     tools:showIn="@layout/activity_manage_lists">
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listsListView" />
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:id="@+id/no_lists_layout">
+
+        <ImageView
+            android:layout_centerHorizontal="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/no_lists_image" />
+
+        <TextView
+            android:layout_marginTop="25dp"
+            android:textSize="18sp"
+            android:layout_below="@+id/no_lists_image"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/msg_no_lists_found" />
+    </RelativeLayout>
 
 </RelativeLayout>
