--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="eu.z3r0byteapps.magistertokens.TokenActivity">
+    tools:context="eu.z3r0byteapps.magistertokens.SettingsActivity">
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
