--- a/app/src/main/res/layout/activity_boot.xml
+++ b/app/src/main/res/layout/activity_boot.xml
@@ -22,10 +22,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/primary"
     tools:context="eu.z3r0byteapps.magistertokens.BootActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
 </RelativeLayout>
