--- a/app/src/main/res/menu/menu_manage_lists.xml
+++ b/app/src/main/res/menu/menu_manage_lists.xml
@@ -3,9 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="eu.z3r0byteapps.magistertokens.TokenActivity">
     <item
-        android:id="@+id/action_help"
+        android:id="@+id/add_list"
         android:orderInCategory="100"
+        android:title="@string/lijst_toevoegen"
+        android:icon="@drawable/ic_add_list"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/action_help"
+        android:orderInCategory="200"
         android:title="@string/menu_help"
         android:icon="@drawable/ic_help"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
 </menu>
